[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yoctolib"]

[project]
name = "yoctolib"
version = "2.1.6480"
authors = [
  { name="Yoctopuce", email="dev@yoctopuce.com" },
]
description = "Yoctopuce PurePython API v2.0"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
          'Development Status :: 4 - Beta',
          'Intended Audience :: Customer Service',
          'Intended Audience :: Developers',
          'Intended Audience :: Science/Research',
          'Natural Language :: English',
          'Operating System :: MacOS :: MacOS X',
          'Operating System :: Microsoft :: Windows :: Windows 7',
          'Operating System :: Microsoft :: Windows :: Windows 8',
          'Operating System :: Microsoft :: Windows :: Windows 8.1',
          'Operating System :: Microsoft :: Windows :: Windows 10',
          'Operating System :: Microsoft :: Windows :: Windows 11',
          'Operating System :: Unix',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
          'Programming Language :: Python :: 3.10',
          'Programming Language :: Python :: 3.11',
          'Programming Language :: Python :: 3.12',
          'Programming Language :: Python :: 3.13'
]

[project.urls]
Homepage = "https://www.yoctopuce.com/EN/libraries.php"
Documentation = "https://www.yoctopuce.com/EN/doc/reference/yoctolib-typedpython-EN.html"
Repository = "https://github.com/yoctopuce/yoctolib_typedpython"
Issues = "https://github.com/yoctopuce/yoctolib_typedpython/issues"
Changelog = "https://www.yoctopuce.com/EN/release_notes.php?sessionid=-1&file=YoctoLib.typedpython.57762.zip"